--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,9 +7,12 @@ coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
+kotlinxCoroutinesTest = "1.10.2"
 lifecycleRuntimeKtx = "2.9.2"
 activityCompose = "1.10.1"
 composeBom = "2024.04.01"
+mockitoCore = "5.12.0"
+mockitoKotlin = "5.4.0"
 navigationCompose = "2.9.3"
 materialCompose = "1.8.3"
 hilt = "2.51.1"
@@ -20,6 +23,11 @@ glide = "4.16.0"
 retrofit = "2.9.0"
 retrofitConverter = "2.9.0"
 foundationLayoutAndroid = "1.8.3"
+uiTestJunit4 = "1.5.0"
+uiTestJunit4Android = "1.9.0"
+uiTestJunit4Jvmstubs = "1.9.0"
+uiTestJunit4JvmstubsVersion = "1.9.0"
+uiTestJunit4Version = "1.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,9 +52,14 @@ androix-hilt = { group = "androidx.hilt", name = "hilt-navigation-fragment", ver
 androix-hilt-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose"}
 kapt-hilt = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltCompiler" }
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
 retrofit-converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofitConverter"}
 androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
+androidx-ui-test-junit4-jvmstubs = { group = "androidx.compose.ui", name = "ui-test-junit4-jvmstubs", version.ref = "uiTestJunit4JvmstubsVersion" }
+ui-test-junit4 = { module = "org.jetbrains.compose.ui:ui-test-junit4", version.ref = "uiTestJunit4Version" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
